# hid-rd.hpp

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  dump.cpp
include/hidrd/: bytes.hpp  hidrd.hpp  typechain.hpp
tests/: CMakeLists.txt  bytes.cpp  descriptor.cpp  itemsize.cpp  typechain.cpp
